app1Cryptography/microservice2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-microservice2
spec:
  selector:
    app: app1-microservice2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8002
  type: ClusterIP
