app1Cryptography/microservice2/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /cryptography/decrypt
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /app1-microservice2
        pathType: Prefix
        backend:
          service:
            name: app1-microservice2
            port:
              number: 80
